<resources>
    <string name="app_name">ProgrammerCalculator</string>
    <string name="_0">0</string>
    <string name="equel">=</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="a">A</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="b">B</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="ac">AC</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="_1245666">1245666</string>
    <string name="to">To</string>
    <string name="from">From</string>


    <string-array name="system">
        <item>HexaDecimal</item>
        <item>Decimal</item>
        <item>Octal</item>
        <item>Binary</item>
    </string-array>
</resources>